--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,11 @@
 {
     "compilerOptions": {
         "strict": true,
-        "target": "ES6",
         "module": "CommonJS",
-        "alwaysStrict": true,
-        "noImplicitAny": true,
-        "noImplicitThis": true,
         "sourceMap": true,
-        "downlevelIteration": true
+        "lib": [
+            "ES6",
+            "DOM"
+        ]
     }
 }
